Wikipedia: games articles: table with reception marks: fix colors from barely visible to #bbb

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.0.82
+@version        1.0.83
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -337,6 +337,7 @@ table.wikitable > tr > th, table.wikitable > * > tr > td, /* https://ru.wikipedi
 .thumbcaption, /* https://en.wikipedia.org/wiki/Vilnius#Early_history_and_Grand_Duchy_of_Lithuania */
 .switcher-container, /* https://commons.wikimedia.org/wiki/Category:Vilnius */
 .mw-headline a span /* https://meta.wikimedia.org/wiki/Software_Collaboration_for_Wikidata/Open_Call */,
+.vgr-title, /* Table at the right with marks, title "Reception" https://en.wikipedia.org/wiki/Project_Snowblind */
 [style='max-width:800px;padding-top:10px;'] [style='position:relative;min-height:320px;min-width:800px;max-width:800px;'], /* Graph at https://ru.wikipedia.org/wiki/Ханты-Мансийский_автономный_округ_—_Югра#Население */
 [style='float:right; margin: 0 0 1em 4%; min-width: 22em; width: 28%;'] span, /* Right "infobox" https://meta.wikimedia.org/wiki/Grants:Programs/Wikimedia_Community_Fund/Rapid_Fund/Wwwyzzerdd_user_experience_improvements_and_critical_maintenance_(ID:_22024892) */
 [style='text-align:center; font-size:8pt; padding:4pt; line-height:1.25em; color:#000000;'],
@@ -583,11 +584,12 @@ ol.references li:target, /* Click to source[1] - highlight the source */
 }
 
 figure[typeof~="mw:File/Thumb"] > figcaption,
+.video-game-reviews caption, /* https://en.wikipedia.org/wiki/Project_Snowblind#Reception */
 #histlegend /* "Вонкавыя прылады: статыстыка правак · пошук праўкі · статыстыка наведваньняў. Тлумачэньне: (цяп) = адрозьненьні ад цяперашняй вэрсіі, (папярэдняя) = адрозьненьні ад папярэдняй вэрсіі, д = дробная праўка." History page: description of stat links https://be-tarask.wikipedia.org/w/index.php?title=Шаблён:Беларускія_пэрыядычныя_выданьні&action=history */
 {
 	background: #000 !important;
 	color: lightgray;
-	border: none;
+	border: none !important;
 }
 
 .mw-parser-output #wdinfobox {
@@ -601,7 +603,6 @@ div.thumbinner,
 	border: none !important;
 }
 
-caption,
 .oo-ui-buttonElement-framed.oo-ui-widget-enabled > .oo-ui-buttonElement-button {
 	color: gray !important;
 }
